--- a/Client/index.html
+++ b/Client/index.html
@@ -101,13 +101,13 @@
             <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
 
             <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active"> <img src="assets/img/slide/slide_1.jpg" class="img-fluid" alt="" />
-                </div>
-                <div class="carousel-item "><img src="assets/img/slide/slide_2.jpg" class="img-fluid" alt="" /></div>
-                <div class="carousel-item "><img src="assets/img/slide/slide_3.jpg" class="img-fluid" alt="" /></div>
-                <div class="carousel-item "><img src="assets/img/slide/slide_4.jpg" class="img-fluid" alt="" /></div>
-                <div class="carousel-item "><img src="assets/img/slide/slide_5.jpg" class="img-fluid" alt="" /></div>
-                <div class="carousel-item "><img src="assets/img/slide/slide_6.jpg" class="img-fluid" alt="" /></div>
+                
+                <div class="carousel-item active" style="background-image: url(assets/img/slide/slide_1.jpg); background-size: cover;"></div>
+                <div class="carousel-item " style="background-image: url(assets/img/slide/slide_2.jpg); background-size: cover;"></div>
+                <div class="carousel-item " style="background-image: url(assets/img/slide/slide_3.jpg); background-size: cover;"></div>
+                <div class="carousel-item " style="background-image: url(assets/img/slide/slide_4.jpg); background-size: cover;"></div>
+                <div class="carousel-item " style="background-image: url(assets/img/slide/slide_5.jpg); background-size: cover;"></div>
+                <div class="carousel-item " style="background-image: url(assets/img/slide/slide_6.jpg); background-size: cover;"></div>
             </div>
 
             <!-- Button slide -->
