--- a/Admin/dang_nhap.html
+++ b/Admin/dang_nhap.html
@@ -44,9 +44,9 @@
                         <div class="card-body">
                             <form>
                                 <div class="form-group">
-                                    <label class="small mb-1" for="inputPhone">Số điện thoại:</label>
-                                    <input class="form-control " id="inputPhone" type="phone"
-                                        placeholder="Nhập số điện thoại" />
+                                    <label class="small mb-1" for="inputUserName">Tên đăng nhập:</label>
+                                    <input class="form-control " id="inputUserName" type="username"
+                                        placeholder="Nhập tên đăng nhập" />
                                 </div>
                                 <div class="form-group mt-3">
                                     <label class="small mb-1" for="inputPassword">Mật khẩu:</label>
