--- a/Admin/quan_ly_don_hang.html
+++ b/Admin/quan_ly_don_hang.html
@@ -173,6 +173,7 @@
                                         <th>Tên khách hàng</th>
                                         <th>Ngày đặt</th>
                                         <th>Tổng tiền</th>
+                                        <th>Địa chỉ</th>
                                         <th>Tình trạng</th>
                                         <th colspan="3">Hành động</th>
                                     </tr>
@@ -184,6 +185,7 @@
                                         <td>Nguyễn Hà Hương Dịu</td>
                                         <td>20/4/2021</td>
                                         <td>72,000,000 VND</td>
+                                        <td>Phú Thọ</td>
                                         <td>Đang giao</td>
                                         <td title="Xem chi tiết" class="see-details"><i class="bi bi-eye-fill"></i></td>
                                         <td title="Sửa tình trạng đơn hàng" class="edit"><i class="bi bi-pencil-fill"></i></td>
@@ -194,6 +196,7 @@
                                         <td>Trần Thị Hằng</td>
                                         <td>21/4/2021</td>
                                         <td>32,000,000 VND</td>
+                                        <td>Nghệ An</td>
                                         <td>Đang giao</td>
                                         <td title="Xem chi tiết" class="see-details"><i class="bi bi-eye-fill"></i></td>
                                         <td title="Sửa tình trạng đơn hàng" class="edit"><i class="bi bi-pencil-fill"></i></td>
@@ -204,6 +207,7 @@
                                         <td>Phạm Thị Hoài</td>
                                         <td>21/4/2021</td>
                                         <td>25,000,0000 VND</td>
+                                        <td>Hải Dương</td>
                                         <td>Đang giao</td>
                                         <td title="Xem chi tiết" class="see-details"><i class="bi bi-eye-fill"></i></td>
                                         <td title="Sửa tình trạng đơn hàng" class="edit"><i class="bi bi-pencil-fill"></i></td>
@@ -214,6 +218,7 @@
                                         <td>Hà Thị Huệ</td>
                                         <td>22/4/2021</td>
                                         <td>100,0000,000 VND</td>
+                                        <td>Vĩnh Phúc</td>
                                         <td>Đã giao</td>
                                         <td title="Xem chi tiết" class="see-details"><i class="bi bi-eye-fill"></i></td>
                                         <td title="Sửa tình trạng đơn hàng" class="edit"><i class="bi bi-pencil-fill"></i></td>
@@ -224,6 +229,7 @@
                                         <td>Nguyễn Thị Huyền Trang</td>
                                         <td>22/4/2021</td>
                                         <td>89,000,000 VND</td>
+                                        <td>Bắc Giang</td>
                                         <td>Đã hủy</td>
                                         <td title="Xem chi tiết" class="see-details"><i class="bi bi-eye-fill"></i></td>
                                         <td title="Sửa tình trạng đơn hàng" class="edit"><i class="bi bi-pencil-fill"></i></td>
